# docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  frontend.Article:
+  model.Article:
     properties:
       content:
         type: string
@@ -26,11 +26,31 @@ definitions:
       title:
         type: string
     type: object
+  model.User:
+    properties:
+      age:
+        type: integer
+      avatar:
+        type: string
+      created:
+        type: string
+      gender:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+      password:
+        type: string
+      updated:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
   /api/v1/articles:
     get:
+      description: Get user by ID
       parameters:
       - description: 文章名称
         in: query
@@ -58,7 +78,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/frontend.Article'
+            $ref: '#/definitions/model.Article'
         "400":
           description: 请求错误
           schema:
@@ -68,7 +88,10 @@ paths:
           schema:
             type: string
       summary: 获取多个文章
+      tags:
+      - Article
     post:
+      description: Get user by ID
       parameters:
       - description: 标签ID
         in: body
@@ -116,7 +139,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/frontend.Article'
+            $ref: '#/definitions/model.Article'
         "400":
           description: 请求错误
           schema:
@@ -126,8 +149,11 @@ paths:
           schema:
             type: string
       summary: 创建文章
+      tags:
+      - Article
   /api/v1/articles/{id}:
     delete:
+      description: Get user by ID
       parameters:
       - description: 文章ID
         in: path
@@ -150,7 +176,10 @@ paths:
           schema:
             type: string
       summary: 删除文章
+      tags:
+      - Article
     get:
+      description: Get user by ID
       parameters:
       - description: 文章ID
         in: path
@@ -163,7 +192,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/frontend.Article'
+            $ref: '#/definitions/model.Article'
         "400":
           description: 请求错误
           schema:
@@ -173,7 +202,10 @@ paths:
           schema:
             type: string
       summary: 获取单个文章
+      tags:
+      - Article
     put:
+      description: Get user by ID
       parameters:
       - description: 标签ID
         in: body
@@ -212,7 +244,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/frontend.Article'
+            $ref: '#/definitions/model.Article'
         "400":
           description: 请求错误
           schema:
@@ -222,4 +254,259 @@ paths:
           schema:
             type: string
       summary: 更新文章
+      tags:
+      - Article
+  /api/v1/heart:
+    get:
+      description: Get user by ID
+      parameters:
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            type: string
+        "500":
+          description: 内部错误
+          schema:
+            type: string
+      summary: 列出Heart
+      tags:
+      - Heart
+    post:
+      description: Get user by ID
+      parameters:
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            type: string
+        "500":
+          description: 内部错误
+          schema:
+            type: string
+      summary: 创建Heart
+      tags:
+      - Heart
+  /api/v1/heart/{id}:
+    delete:
+      description: Get user by ID
+      parameters:
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            type: string
+        "500":
+          description: 内部错误
+          schema:
+            type: string
+      summary: 删除Heart
+      tags:
+      - Heart
+    get:
+      description: Get user by ID
+      parameters:
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            type: string
+        "500":
+          description: 内部错误
+          schema:
+            type: string
+      summary: 获取Heart
+      tags:
+      - Heart
+    post:
+      description: Get user by ID
+      parameters:
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            type: string
+        "500":
+          description: 内部错误
+          schema:
+            type: string
+      summary: 更新Heart
+      tags:
+      - Heart
+  /api/v1/users:
+    post:
+      consumes:
+      - application/json
+      description: Create a new user
+      parameters:
+      - description: User to create
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Invalid input
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Create a new user
+      tags:
+      - User
+  /api/v1/users/{id}:
+    delete:
+      description: Delete user by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: User deleted
+          schema:
+            type: string
+        "404":
+          description: User not found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete user by ID
+      tags:
+      - User
+    get:
+      description: Get user by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "404":
+          description: User not found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get user by ID
+      tags:
+      - User
+    put:
+      consumes:
+      - application/json
+      description: Update user by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: User to update
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Invalid input
+          schema:
+            type: string
+        "404":
+          description: User not found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update user by ID
+      tags:
+      - user
 swagger: "2.0"
